--- a/code.html
+++ b/code.html
@@ -27,6 +27,10 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="./index.html">回首页</a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="./usage.html">使用说明</a>
+                </li>
             </ul>
         </div>
     </div>
