--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/solarized-light.css">
+    <link rel="stylesheet" href="css/prism.css">
 
     <link rel="stylesheet" href="css/style.css">
     <title>星云合约助手-您的 Dapp 开发好帮手</title>
@@ -124,7 +124,7 @@
     <script src="lib/nebPay.js"></script>
     <script src="lib/nebulas.js"></script>
     <script src="js/base64.js"></script>
-    <script src="js/highlight.js"></script>
+    <script src="js/prism.js"></script>
 
     <script src="js/contract_helper.js"></script>
 </body>
