--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         节约很多时间。
                     </p>
                     <p>
-                        本助手就是这样一个给广大开发者助力的小工具，使用很简单，输入合约地址，点击查询，付一点点辛苦费（目前公测中暂时免费），即可获取完整的合约代码。
+                        本助手就是这样一个给广大开发者助力的小工具，使用很简单，输入合约地址，点击查询，付一点点辛苦费，即可获取完整的合约代码。
                         岂不美滋滋 ^-^。
                     </p>
                 </div>
